Updated project for Xcode 4.0.

--- a/GCPing-Info.plist
+++ b/GCPing-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFile</key>
 	<string>ping.png</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.z2live.damon.gcping</string>
+	<string>com.z2live.gcping</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
